# src/lib/api-types.ts
@@ -15,3 +15,10 @@ export type UserTokenDto = ApiSchemas['UserToken'];
 export type ApiErrorDto = ApiSchemas['Error'];
 export type HealthDto = ApiSchemas['Health'];
 export type DailyUsageDto = ApiSchemas['DailyUsage'];
+export type EvaluationSetDto = ApiSchemas['EvaluationSet'];
+export type EvaluationSetDetailDto = ApiSchemas['EvaluationSetDetail'];
+export type EvaluationCaseDto = ApiSchemas['EvaluationCase'];
+export type EvaluationRunDto = ApiSchemas['EvaluationRun'];
+export type EvaluationRunDetailDto = ApiSchemas['EvaluationRunDetail'];
+export type EvaluationResultDto = ApiSchemas['EvaluationResult'];
+export type EvaluationRegressionDto = ApiSchemas['EvaluationRegression'];
